--- a/Coursera_Capstone_UK_Price_Index_VD_Code.ipynb
+++ b/Coursera_Capstone_UK_Price_Index_VD_Code.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Coursera Capstone Project - UK Price Index**\n",
-   
+    "# **Coursera Capstone Project - Week 5**\n",
+    "### Author: Arvind Saigal\n",
     "\n",
-    "##
+    "## **------------------------------------------------------------------------------------------------------------------------------------------------------------------------**\n",
     "### _**About the project**_    \n",
-    "#### 1. **About the Project description and other information related used dataset and the other background infomation please see the below named files:**\n",
-    "#### 2. ** 1) Background Information: Coursera_Capstone_UK_Price_Index_VD_Business_Probelm.docx**\n",
-    "#### 3. **# 2) Dataset Used: Coursera_Capstone_UK_Price_Index_VD_Data.docx**\n",
-    "#### 
-    "## 
+    "#### 1. **The following script helps potential clients who are looking to buy suitable property in London**\n",
+    "#### 2. **With a pre-determined budged, this automation will recommend you locations and current average price of real estate where one can make a real estate investment**\n",
+    "#### 3. **Important amenities/ venues for each recommended location are displayed**\n",
+    "#### 4. **Facilities like elementary schools, high schools, hospitals & grocery stores are displayed for each recommended location**\n",
+    "## **------------------------------------------------------------------------------------------------------------------------------------------------------------------------**\n"
    ]
   },
   {
